--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ ADD_LIBRARY (TREL ${LIB_TYPE} "src/design_func.c"
 							  "src/comp_tiempo.c"
 							  "src/design_resist.c"
 							  "src/val_termod.c"
+							  "src/rocket.c"
 			)
 
 # Specify the directory to contain header files
